--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Anka.75
-spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.schema-locations=classpath:data.sql
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+security.ignored=/**
