--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Anka.75
-spring.sql.init.schema-locations=classpath:data.sql
+spring.datasource.username=USER
+spring.datasource.password=PASSWORD
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
